--- a/stylesheet/theme-slate.css
+++ b/stylesheet/theme-slate.css
@@ -2345,10 +2345,10 @@ pre a {
     filter: brightness(10000)
 }
 #header {
-    background-image: url('https://cdn.rawgit.com/dags-/bd13a4cc00a17bf419bce83d0d04435a/raw/68eaf3ea52e4e8ab36609a8da8a21f021b2309ab/test.svg');
+    background-image: url('https://ardacraft.github.io/jenkins-theme/assets/dev-green.svg');
     background-repeat: no-repeat;
-    background-size: auto 40px, cover;
-    background-position: 10px 10px;
+    background-size: auto 50px, cover;
+    background-position: center;
 }
 #jenkins-home-link {
     display: none !important
