--- a/stylesheet/theme-slate.css
+++ b/stylesheet/theme-slate.css
@@ -2348,7 +2348,8 @@ pre a {
 #header {
     background-image: url('https://ardacraft.github.io/jenkins-theme/assets/dev-green.svg');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left center;
+    background-size: 50%;
 }
 #jenkins-home-link {
     display: none !important
