--- a/stylesheet/theme-slate.css
+++ b/stylesheet/theme-slate.css
@@ -2349,7 +2349,7 @@ pre a {
     background-image: url('https://ardacraft.github.io/jenkins-theme/assets/dev-green.svg');
     background-repeat: no-repeat;
     background-position: left center;
-    background-size: 50%;
+    background-size: 265px;
 }
 #jenkins-home-link {
     display: none !important
